Thu Jul 22 12:26:08 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/examples/Hello/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/DDS_Sender.mpc:
          Resolved duplicate names.

Thu Jul 22 11:44:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial/01_general.html:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/02_idl.html:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/03_executors.html:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/04_ami4ccm.html:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/05_compilation.html:
          Minor improvements.

Thu Jul 22 09:54:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/OMG-CCM-Tutorial.pptx:
          Added some more info regarding the DDS4CCM connector.

Thu Jul 22 09:38:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/OMG-CCM-Tutorial.pptx:
          Added some more info regarding the DDS4CCM connector.

Thu Jul 22 09:10:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Deployment/descriptors/Plan.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Receiver_comp/src/Shapes_Receiver_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Receiver_comp/src/Shapes_Receiver_comp_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_conn.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_msg.idl: