@@ -1,12 +1,12 @@
 // $Id$
 
 /**
- * @file QCTQ_Test_Base.idl
+ * @file Base.idl
  * @author Marcel Smit <msmit@remedy.nl>
  */
 
-#ifndef QUERY_CONDITION_TEST_BASE_IDL_
-#define QUERY_CONDITION_TEST_BASE_IDL_
+#ifndef BASE_IDL_
+#define BASE_IDL_
 
 struct QueryConditionTest {
   string symbol; //@key
