@@ -1,3 +1,4 @@
+// $Id$
 
 /*
   WARNING: THIS FILE IS AUTO-GENERATED. DO NOT MODIFY.
